# llmOps

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DECORATOR_SPEC.md  Justfile  LLM_OBSERVABILITY_SDK_ARCHITECTURE.md  README.md  medicalrecordsplan.md  pyproject.toml
docker/: README.md  docker-compose.yaml
docs/: API_SPECIFICATION.md  AUTO_INSTRUMENTATION_ANALYSIS.md  CONCEPTUAL_ARCHITECTURE.md  CONCEPTUAL_ARCHITECTURE_02.md  DESIGN_PHILOSOPHY.md  INDEX.md  PRD.md  PROCESS.md  REFACTOR_PLAN.md  REFERENCES.md  REFERENCE_ARCHITECTURE.md  SEMANTICS.md  TEST_PHILOSOPHY.md  TEST_REFACTOR.md  TLS.md
docs/analysis/: PLATFORM_ARCHITECTURE_ANALYSIS.md
docs/api_spec/: API_SPEC_01.md  API_SPEC_02.md  API_SPEC_03.md
docs/architecture/: CONCEPTUAL_ARCHITECTURE.md  REFERENCE_ARCHITECTURE.md
docs/examples/: API_SPECIFICATION_EXAMPLE.md  CONCEPTUAL_ARCHITECTURE_EXAMPLE.md  PRD_EXAMPLE.md  REFERENCE_ARCHITECTURE_EXAMPLE.md
docs/infra/: INFRA.md
docs/prd/: PRD_01.md  PRD_02.md  PRD_03.md
docs/reference_architecture/: REFERENCE_ARCHITECTURE_01.md  REFERENCE_ARCHITECTURE_02.md
docs/specs/: ARIZE-TRACER.md  AUTO_INSTRUMENT_SPEC.md  EVALUATORS.md  HALLUCINATIONS.md  REGISTRY.md  SEMANTICS.md
llm-observability-sdk/: Justfile  README.md  llmops.yaml  pyproject.toml
llm-observability-sdk/docker/: docker-compose.test.yml  docker-compose.yaml
llm-observability-sdk/examples/: llmops.example.yaml  llmops.yaml  server.py
llm-observability-sdk/examples/adk_agent/: main.py  server.py
llm-observability-sdk/examples/fastapi_adk_app/: README.md  main.py
llm-observability-sdk/examples/genai_service/: .env.example  Justfile  README.md  __init__.py  agents.py  config.py  llmops.yaml  main.py  observability.py  pyproject.toml
llm-observability-sdk/examples/genai_service/scripts/: setup_data.py
llm-observability-sdk/examples/llmops_demo/: .env.example  Justfile  README.md  __init__.py  agents.py  llmops.yaml  main.py  pyproject.toml
llm-observability-sdk/scripts/: test_trace_capture.py  validate_backends.py
llm-observability-sdk/src/llmops/: __init__.py  arize.py  config.py  configure.py  exceptions.py  init.py  instrument.py  mlflow.py
llm-observability-sdk/src/llmops/_internal/: __init__.py  instrumentation.py  logging.py  span_filter.py  state.py  telemetry.py
llm-observability-sdk/src/llmops/_platforms/: __init__.py  _base.py  _instrument.py  _registry.py  arize.py  mlflow.py
llm-observability-sdk/src/llmops/api/: __init__.py  _init.py  types.py
llm-observability-sdk/src/llmops/backends/: mlflow.py  otlp.py  phoenix.py
llm-observability-sdk/src/llmops/exporters/: __init__.py
llm-observability-sdk/src/llmops/exporters/arize/: __init__.py  exporter.py
llm-observability-sdk/src/llmops/exporters/mlflow/: __init__.py  exporter.py
llm-observability-sdk/src/llmops/instrumentation/: __init__.py  google_adk.py  google_genai.py
llm-observability-sdk/src/llmops/sdk/: __init__.py  lifecycle.py  pipeline.py
llm-observability-sdk/src/llmops/sdk/config/: __init__.py  load.py
llm-observability-sdk/tests/: COVERAGE.md  __init__.py  conftest.py  fakes.py  test_configure.py
llm-observability-sdk/tests/integration/: __init__.py  conftest.py  test_arize_instrument.py  test_arize_telemetry.py  test_auto_instrumentation.py  test_duplicate_guard.py  test_google_adk_instrumentation.py  test_google_genai_instrumentation.py  test_instrument_existing.py  test_mlflow_backend.py  test_mlflow_instrument.py  test_phoenix_backend.py
llm-observability-sdk/tests/integration/e2e/: __init__.py  conftest.py  test_mlflow_export.py  test_phoenix_export.py
llm-observability-sdk/tests/prd_01/: README.md  __init__.py  test_arize_auto_instrumentation_spec.py  test_arize_env_overrides_spec.py  test_arize_instrument_spec.py  test_arize_telemetry_spec.py  test_arize_validation_spec.py  test_auto_instrumentation_spec.py  test_env_overrides_spec.py  test_init_spec.py  test_instrument_spec.py  test_lazy_loading_spec.py  test_mlflow_instrument_spec.py  test_platform_isolation_spec.py  test_telemetry_modes.py  test_validation_spec.py
llm-observability-sdk/tests/prd_02/: README.md  __init__.py  test_duplicate_guard_spec.py  test_instrument_existing_spec.py  test_programmatic_config_spec.py  test_span_filter_spec.py
llm-observability-sdk/tests/unit/: test_config.py  test_lazy_loading.py  test_platform_isolation.py  test_span_filter.py  test_validation.py
scripts/: validate_backends.py
