[project]
name = "llmops"
version = "0.1.0"
description = "Unified auto-instrumentation SDK for LLM observability"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Platform Team" }]
keywords = [
    "llm",
    "observability",
    "tracing",
    "opentelemetry",
    "phoenix",
    "mlflow",
]

dependencies = [
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
arize = [
    "arize-otel>=0.7.0", # For arize.otel.register support
]
phoenix = [
    "openinference-instrumentation-google-adk>=0.1.5",
    "openinference-instrumentation-google-genai>=0.1.9",
]

test = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "google-adk>=1.21.0",
    "google-genai>=1.50.0",
    "pytest>=8.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]
all = ["llmops[arize,phoenix,test]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: end-to-end tests requiring Docker services (Phoenix/MLflow)"]
addopts = "-m 'not e2e'"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[dependency-groups]
dev = ["bandit>=1.9.2", "mypy>=1.19.1", "ruff>=0.14.11", "types-PyYAML>=6.0.0"]
