[project]
name = "llmops"
version = "0.1.0"
description = "Unified auto-instrumentation SDK for LLM observability"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Platform Team" }]
keywords = [
    "llm",
    "observability",
    "tracing",
    "opentelemetry",
    "arize",
    "mlflow",
]

dependencies = [
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
arize = [
    "arize-otel>=0.7.0",
    "openinference-instrumentation-google-adk>=0.1.5",
    "openinference-instrumentation-google-genai>=0.1.9",
]
mlflow = [
    "mlflow>=2.10.0",
]

test = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "google-adk>=1.21.0",
    "google-genai>=1.50.0",
    "pytest>=8.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]
all = ["llmops[arize,mlflow,test]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Fast isolated tests (no external deps)",
    "integration: Tests against real libraries (FakeArizeOtel, real TracerProvider)",
    "e2e: End-to-end tests requiring Docker services (Phoenix/MLflow)",
    "disable_mock_sdk_telemetry: Disable the autouse mock_sdk_telemetry fixture for tests that verify real arize.otel interactions",
]
addopts = "-m 'not e2e'"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[dependency-groups]
dev = ["bandit>=1.9.2", "mypy>=1.19.1", "ruff>=0.14.11", "types-PyYAML>=6.0.0"]

# =============================================================================
# Hatch Environments (for pre-commit hooks and CI)
# =============================================================================
# These environments are used by pre-commit and CI pipelines.
# For local development, use `just` recipes which use UV directly.
# Both approaches use the same tool versions for consistency.

[tool.hatch.envs.lint]
description = "Static analysis: linting, type checking, security scanning"
detached = true
installer = "uv"
dependencies = [
    "ruff>=0.14.11",
    "mypy>=1.19.1",
    "bandit>=1.9.2",
    "types-PyYAML>=6.0.0",
]

[tool.hatch.envs.lint.scripts]
check = "ruff check src/ tests/"
format-check = "ruff format --check src/ tests/"
typing = "mypy src/ tests/"
security = "bandit -r src/ tests/ -s B101"
# Combined check for pre-commit (runs all in sequence)
all = ["check", "typing", "security"]

# Auto-fix scripts (not used by pre-commit, but available for developers/CI)
fmt = "ruff format src/ tests/"
fix = "ruff check --fix src/ tests/"
