[project]
name = "llmops-demo"
version = "0.1.0"
description = "Minimal FastAPI example demonstrating llmops.arize.instrument() for auto-instrumentation"
requires-python = ">=3.13"
dependencies = [
    # FastAPI and server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.1",

    # Google ADK and GenAI
    "google-adk>=1.2.0",
    "google-genai>=1.0.0",

    # LLMOps SDK (local path)
    "llmops",

    # OpenInference instrumentor (required by llmops SDK)
    "openinference-instrumentation-google-adk>=0.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.uv.sources]
llmops = { path = "../..", editable = true }

# =============================================================================
# Ruff Configuration
# =============================================================================

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# MyPy Configuration
# =============================================================================

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Relaxed for demo service
ignore_missing_imports = true  # External packages may lack stubs
explicit_package_bases = true
files = ["main.py", "agents.py"]
